[gd_scene load_steps=5 format=3 uid="uid://ct2rsfnl7fi6u"]

[ext_resource type="Texture2D" uid="uid://bhofondcn84ew" path="res://sprites/UIPanel.png" id="1_3ryf8"]
[ext_resource type="Theme" uid="uid://du12ka2217r4x" path="res://fonts/Izayoi_Theme.tres" id="1_jeq77"]
[ext_resource type="Script" uid="uid://bqrxnm8bi7no" path="res://scenes/combat_forecast.gd" id="2_npc5x"]
[ext_resource type="Script" uid="uid://c2e1stpb6yppa" path="res://scenes/animation_handler.gd" id="5_knule"]

[node name="CombatForecast" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme = ExtResource("1_jeq77")
script = ExtResource("2_npc5x")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Dimmer" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.545098)

[node name="ForecastMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="ForecastBox" type="VBoxContainer" parent="ForecastMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1

[node name="StatRow" type="HBoxContainer" parent="ForecastMargin/ForecastBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1

[node name="AtkPanel" type="PanelContainer" parent="ForecastMargin/ForecastBox/StatRow"]
custom_minimum_size = Vector2(83, 0)
layout_mode = 2

[node name="BackgroundCenter2" type="NinePatchRect" parent="ForecastMargin/ForecastBox/StatRow/AtkPanel"]
layout_mode = 2
theme = ExtResource("1_jeq77")
texture = ExtResource("1_3ryf8")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="AMa" type="MarginContainer" parent="ForecastMargin/ForecastBox/StatRow/AtkPanel"]
layout_mode = 2
theme = ExtResource("1_jeq77")
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8

[node name="AVB" type="VBoxContainer" parent="ForecastMargin/ForecastBox/StatRow/AtkPanel/AMa"]
layout_mode = 2
theme = ExtResource("1_jeq77")
theme_override_constants/separation = 2

[node name="NAME" type="Label" parent="ForecastMargin/ForecastBox/StatRow/AtkPanel/AMa/AVB"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_jeq77")
text = "null"

[node name="LIFE" type="RichTextLabel" parent="ForecastMargin/ForecastBox/StatRow/AtkPanel/AMa/AVB"]
custom_minimum_size = Vector2(24, 10)
layout_mode = 2
size_flags_horizontal = 9
theme = ExtResource("1_jeq77")
theme_override_font_sizes/normal_font_size = 0
bbcode_enabled = true
text = "[center]Null[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false
deselect_on_focus_loss_enabled = false
text_direction = 1

[node name="ACC" type="Label" parent="ForecastMargin/ForecastBox/StatRow/AtkPanel/AMa/AVB"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
size_flags_horizontal = 9
theme = ExtResource("1_jeq77")
text = "Null"
horizontal_alignment = 1

[node name="DMG" type="Label" parent="ForecastMargin/ForecastBox/StatRow/AtkPanel/AMa/AVB"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
size_flags_horizontal = 9
theme = ExtResource("1_jeq77")
text = "Null"
horizontal_alignment = 1

[node name="CRIT" type="Label" parent="ForecastMargin/ForecastBox/StatRow/AtkPanel/AMa/AVB"]
layout_mode = 2
size_flags_horizontal = 9
theme = ExtResource("1_jeq77")
text = "Null"
horizontal_alignment = 1

[node name="Weapon" type="Label" parent="ForecastMargin/ForecastBox/StatRow/AtkPanel/AMa/AVB"]
layout_mode = 2
size_flags_horizontal = 9
theme = ExtResource("1_jeq77")
horizontal_alignment = 1

[node name="Labels" type="PanelContainer" parent="ForecastMargin/ForecastBox/StatRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="BackgroundCenter2" type="NinePatchRect" parent="ForecastMargin/ForecastBox/StatRow/Labels"]
layout_mode = 2
theme = ExtResource("1_jeq77")
texture = ExtResource("1_3ryf8")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Margin" type="MarginContainer" parent="ForecastMargin/ForecastBox/StatRow/Labels"]
layout_mode = 2
theme = ExtResource("1_jeq77")
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ForecastMargin/ForecastBox/StatRow/Labels/Margin"]
layout_mode = 2
theme = ExtResource("1_jeq77")
theme_override_constants/separation = 2

[node name="BLANK" type="Label" parent="ForecastMargin/ForecastBox/StatRow/Labels/Margin/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
theme = ExtResource("1_jeq77")
horizontal_alignment = 1

[node name="LIFELB" type="Label" parent="ForecastMargin/ForecastBox/StatRow/Labels/Margin/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jeq77")
text = "Life"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ACCLB" type="Label" parent="ForecastMargin/ForecastBox/StatRow/Labels/Margin/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jeq77")
text = "Accuracy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DMGLB" type="Label" parent="ForecastMargin/ForecastBox/StatRow/Labels/Margin/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jeq77")
text = "Damage"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CRITLB" type="Label" parent="ForecastMargin/ForecastBox/StatRow/Labels/Margin/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jeq77")
text = "Crit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WepLb" type="Label" parent="ForecastMargin/ForecastBox/StatRow/Labels/Margin/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_jeq77")
text = "Weapon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TargetPanel" type="PanelContainer" parent="ForecastMargin/ForecastBox/StatRow"]
custom_minimum_size = Vector2(83, 0)
layout_mode = 2

[node name="BackgroundCenter2" type="NinePatchRect" parent="ForecastMargin/ForecastBox/StatRow/TargetPanel"]
layout_mode = 2
theme = ExtResource("1_jeq77")
texture = ExtResource("1_3ryf8")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="TMa" type="MarginContainer" parent="ForecastMargin/ForecastBox/StatRow/TargetPanel"]
layout_mode = 2
theme = ExtResource("1_jeq77")
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8

[node name="TVB" type="VBoxContainer" parent="ForecastMargin/ForecastBox/StatRow/TargetPanel/TMa"]
layout_mode = 2
theme = ExtResource("1_jeq77")
theme_override_constants/separation = 2

[node name="NAME" type="Label" parent="ForecastMargin/ForecastBox/StatRow/TargetPanel/TMa/TVB"]
layout_mode = 2
theme = ExtResource("1_jeq77")
text = "Null"
horizontal_alignment = 2

[node name="LIFE" type="RichTextLabel" parent="ForecastMargin/ForecastBox/StatRow/TargetPanel/TMa/TVB"]
custom_minimum_size = Vector2(15, 10)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_jeq77")
bbcode_enabled = true
text = "[center]Null[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false
deselect_on_focus_loss_enabled = false

[node name="ACC" type="Label" parent="ForecastMargin/ForecastBox/StatRow/TargetPanel/TMa/TVB"]
custom_minimum_size = Vector2(15, 10)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_jeq77")
text = "Null"
horizontal_alignment = 1

[node name="DMG" type="Label" parent="ForecastMargin/ForecastBox/StatRow/TargetPanel/TMa/TVB"]
custom_minimum_size = Vector2(15, 10)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_jeq77")
text = "Null"
horizontal_alignment = 1

[node name="CRIT" type="Label" parent="ForecastMargin/ForecastBox/StatRow/TargetPanel/TMa/TVB"]
custom_minimum_size = Vector2(15, 10)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_jeq77")
text = "Null"
horizontal_alignment = 1

[node name="Weapon" type="Label" parent="ForecastMargin/ForecastBox/StatRow/TargetPanel/TMa/TVB"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_jeq77")
horizontal_alignment = 1

[node name="EffectRow" type="HBoxContainer" parent="ForecastMargin/ForecastBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1

[node name="AtkEfPanel" type="PanelContainer" parent="ForecastMargin/ForecastBox/EffectRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="BackgroundCenter2" type="NinePatchRect" parent="ForecastMargin/ForecastBox/EffectRow/AtkEfPanel"]
layout_mode = 2
theme = ExtResource("1_jeq77")
texture = ExtResource("1_3ryf8")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="AMa" type="MarginContainer" parent="ForecastMargin/ForecastBox/EffectRow/AtkEfPanel"]
layout_mode = 2
theme = ExtResource("1_jeq77")
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 10

[node name="AVB" type="VBoxContainer" parent="ForecastMargin/ForecastBox/EffectRow/AtkEfPanel/AMa"]
layout_mode = 2
theme = ExtResource("1_jeq77")
theme_override_constants/separation = 2

[node name="Labels2" type="PanelContainer" parent="ForecastMargin/ForecastBox/EffectRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="BackgroundCenter2" type="NinePatchRect" parent="ForecastMargin/ForecastBox/EffectRow/Labels2"]
layout_mode = 2
theme = ExtResource("1_jeq77")
texture = ExtResource("1_3ryf8")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Margin" type="MarginContainer" parent="ForecastMargin/ForecastBox/EffectRow/Labels2"]
layout_mode = 2
theme = ExtResource("1_jeq77")
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ForecastMargin/ForecastBox/EffectRow/Labels2/Margin"]
layout_mode = 2
theme = ExtResource("1_jeq77")
theme_override_constants/separation = 2

[node name="EFFLB" type="RichTextLabel" parent="ForecastMargin/ForecastBox/EffectRow/Labels2/Margin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("1_jeq77")
bbcode_enabled = true
text = "[center]Effects[/center]"
fit_content = true
scroll_active = false

[node name="TargetEfPanel" type="PanelContainer" parent="ForecastMargin/ForecastBox/EffectRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="BackgroundCenter2" type="NinePatchRect" parent="ForecastMargin/ForecastBox/EffectRow/TargetEfPanel"]
layout_mode = 2
theme = ExtResource("1_jeq77")
texture = ExtResource("1_3ryf8")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="TMa" type="MarginContainer" parent="ForecastMargin/ForecastBox/EffectRow/TargetEfPanel"]
layout_mode = 2
theme = ExtResource("1_jeq77")
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 10

[node name="TVB" type="VBoxContainer" parent="ForecastMargin/ForecastBox/EffectRow/TargetEfPanel/TMa"]
layout_mode = 2
theme = ExtResource("1_jeq77")
theme_override_constants/separation = 2
alignment = 2

[node name="GridContainer" type="GridContainer" parent="ForecastMargin"]
layout_mode = 2

[node name="AnimationHandler" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 200
script = ExtResource("5_knule")

[node name="InitiatorNode" type="Control" parent="AnimationHandler"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="InitiateNode" type="Control" parent="AnimationHandler"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
